# ai-content-farm

./: -  .checkov.yml  .coverage  .env  .env.example  .eslintrc.json  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  .yamllint.yaml  AGENTS.md  AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  CLEAN_REBUILD_PLAN.md  COMMIT_PLAN.md  CONTAINER_APPS_COMPLETE.md  CONTAINER_APPS_CONSOLIDATION_PLAN.md  CONTAINER_APPS_CONSOLIDATION_SUMMARY.md  CONTAINER_SYNC_OPTIMIZATION.md  CONTENT_PROCESSOR_REFACTOR_PLAN.md  DEPLOYMENT_ISSUES.md  DESIGN.md  FILENAME_MISMATCH_BUG.md  FILE_INVENTORY.md  INFRASTRUCTURE_STATUS.md  LIVE_TESTING_RESULTS.md  MESSAGE_DEQUEUE_IMPLEMENTATION_READY.md  Makefile  Makefile.backup  PIPELINE_FIX_PLAN.md  PROGRESS.md  PROJECT_LOG.md  PROJECT_STATUS.md  PR_REVIEW_REQUEST.md  PUSH_SUMMARY.md  QUALITY_GATE_README.md  (+69 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  COPILOT_INSTRUCTIONS.md  README.md  agent-instructions.md  copilot-auto-resolution-config.md  copilot-instructions.md  dependabot.yml  pull_request_template.md
.temp/: DAILY_STATUS_AUGUST_7.md  INFRASTRUCTURE_STATUS.md  PIPELINE_STATUS.md  PROJECT_REVIEW_AUGUST_7.md  SESSION_WRAP_UP.md  drift-investigation.md  function-app-roles-research.md  pipeline-optimization-complete.md  pipeline-optimizations-summary.md  pipeline-test-plan.md
azure-function-deploy/: host.json
checkov.json/: results_json.json
collection-templates/: README.md  adaptive-multi-source.json  ai-research.json  default.json  discovery.json  mastodon-social.json  mastodon.json  quality-tech.json  sustainable-reddit.json.disabled  tech-news.json  tech-rss.json  web-overlap-test.json
config/: .checkov.yml  .flake8  .markdownlint.json  .semgrep.yml  .semgrepignore  .trivyignore  .yamllint.yml  README.md  conftest.py  dapr-mtls-config.yaml  pytest.ini  shared-versions.toml
containers/: main.py  (+4 more)
libs/: __init__.py  app_config.py  azure_queue_mocks.py  background_poller.py  blob_auth.py  blob_operations.py  blob_paths.py  blob_storage.py  blob_utils.py  collection_templates.py  config_base.py  container_lifecycle.py  data_contracts.py  extended_data_contracts.py  http_client.py  keda_dapr_integration.py  mtls_client.py  mtls_health.py  mtls_integration.py  openai_rate_limiter.py  processing_config.py  pyproject.toml  queue_client.py  queue_message_handler.py  queue_triggers.py  rate_limiter.py  retry_utilities.py  scaling_analyzer.py  scaling_metrics.py  secure_error_handler.py  service_bus_client.py  service_bus_router.py  servicebus_migration.py  shared_models.py  simplified_blob_client.py  site_generator_exceptions.py  standard_endpoints.py  standard_tests.py  startup_config.py  storage_queue_client.py  (+6 more)
libs/monitoring/: __init__.py  appinsights.py
(+1582 files in other folders)
