[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "libs"
version = "0.1.0"
description = "Shared utilities for ai-content-farm (internal)"
authors = [ { name = "ai-content-farm" } ]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-storage-blob>=12.0.0",
]
